# sampleSCF

./: .mypy.ini  .pre-commit-config.yaml  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: labeler.yml
.github/workflows/: ci_tests.yml  codeql-analysis.yml
docs/: conf.py  index.rst
docs/sample_scf/: index.rst
licenses/: LICENSE.rst
sample_scf/: __init__.py  _astropy_init.py  _typing.py  base.py  base_multivariate.py  base_univariate.py  cdf_strategy.py  conftest.py  core.py  exact.py  interpolated.py  representation.py  sample_exact.py  sample_intrp.py  utils.py
sample_scf/_old/: cdf_strategy.py
sample_scf/exact/: __init__.py  azimuth.py  core.py  inclination.py  radial.py  rvs_azimuth.py  rvs_inclination.py  rvs_radial.py
sample_scf/exact/tests/: test_core.py  test_exact.py  test_utils.py
sample_scf/interpolated/: __init__.py  azimuth.py  core.py  inclination.py  radial.py  rvs_azimuth.py  rvs_inclination.py  rvs_radial.py
sample_scf/interpolated/tests/: test_interpolated.py
sample_scf/tests/: base.py  common.py  scf_coeffs.npz  test_base.py  test_base_multivariate.py  test_base_univariate.py  test_conftest.py  test_core.py  test_exact.py  test_init.py  test_interpolated.py  test_representation.py  test_sample_exact.py  test_sample_intrp.py  test_utils.py
sample_scf/tests/data/: __init__.py  data_Test_rv_potential.py  nfw.npz  scf_nfw_coeffs.npz  scf_tnfw_coeffs.npz
