[build-system]

requires = ["extension-helpers",
            "setuptools",
            "setuptools_scm",
            "wheel"]

build-backend = 'setuptools.build_meta'

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = ["astropy", "extension_helpers", "galpy", "numpy", "pytest", "scipy", "setuptools"]
known_localfolder = "sample_scf"

import_heading_stdlib = "BUILT-IN"
import_heading_thirdparty = "THIRD PARTY"
import_heading_firstparty = "FIRST PARTY"
import_heading_localfolder = "LOCAL"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
