[metadata]
name = sample_scf
author = Nathaniel Starkman
author_email = n.starkman@mail.utoronto.ca
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/GalOrrery/sampleSCF
description = Sample from an SHernquist and Ostriker (1992) Self-Consistent Field (SCF) expansion of a 3D density field.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = GalOrrery/sampleSCF

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    astropy
    extension_helpers
    matplotlib
    mypy
    numpy >= 1.20
    scipy

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
sample_scf = data/*

[tool:pytest]
testpaths = "sample_scf" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
doctest_norecursedirs=
    */_build/*

[coverage:run]
omit =
    sample_scf/_astropy_init*
    sample_scf/conftest.py
    sample_scf/*setup_package*
    sample_scf/tests/*
    sample_scf/*/tests/*
    sample_scf/extern/*
    sample_scf/version*
    */sample_scf/_astropy_init*
    */sample_scf/conftest.py
    */sample_scf/*setup_package*
    */sample_scf/tests/*
    */sample_scf/*/tests/*
    */sample_scf/extern/*
    */sample_scf/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
